[package]
name = "catsay"
version = "0.1.0"
authors = ["Roel de Jong <roel4811@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.15"
colored = "1.7.0"
failure = "0.1.8"
exitfailure = "0.5.1"